--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 ENVIRONMENT="dev"
 
 # The secure key Craft will use for hashing and encrypting data
-SECURITY_KEY="aaaa"
+SECURITY_KEY=""
 
 # The database driver that will used ('mysql' or 'pgsql')
 DB_DRIVER="mysql"
@@ -14,10 +14,10 @@ DB_SERVER="localhost"
 DB_USER="root"
 
 # The database password to connect with
-DB_PASSWORD="root"
+DB_PASSWORD=""
 
 # The name of the database to select
-DB_DATABASE="happylager"
+DB_DATABASE=""
 
 # The database schema that will be used (PostgreSQL only)
 DB_SCHEMA="public"
@@ -26,13 +26,13 @@ DB_SCHEMA="public"
 DB_TABLE_PREFIX=""
 
 # The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
-DB_PORT="3306"
+DB_PORT=""
 
 # The base site URL
-SITE_URL="http://localhost:8888/ixlab-demo/web/"
+SITE_URL="http://happylager.test"
 
 # The asset base path
 ASSET_BASE_PATH="./assets"
 
 # The asset base URL
-ASSET_BASE_URL="http://localhost:8888/ixlab-demo/web/assets"
+ASSET_BASE_URL="/assets"
