--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
         "grunt-contrib-uglify": "0.3.2",
         "grunt-contrib-watch": "latest",
         "grunt-imageoptim": "latest"
+    },
+    "dependencies": {
+        "grunt-cli": "^1.3.2",
+        "sass": "^1.23.7"
     }
 }
