--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ DB_SERVER="localhost"
 DB_USER="root"
 
 # The database password to connect with
-DB_PASSWORD="root"
+DB_PASSWORD=""
 
 # The name of the database to select
 DB_DATABASE="happylager"
@@ -29,10 +29,10 @@ DB_TABLE_PREFIX=""
 DB_PORT="3306"
 
 # The base site URL
-SITE_URL="http://localhost:8888/happylager.test/web/"
+SITE_URL="http://localhost/happylager.test/web/"
 
 # The asset base path
 ASSET_BASE_PATH="./assets"
 
 # The asset base URL
-ASSET_BASE_URL="http://localhost:8888/happylager.test/web/assets"
+ASSET_BASE_URL="http://localhost/happylager.test/web/assets"
